[package]
name = "scheme-rs"
version = "0.0.1"
authors = ["Matthew Plant <maplant@protonmail.com>"]
edition = "2021"
description = "Embedded scheme for the async-rust ecosystem"
license = "MPL-2.0"

documentation = "https://docs.rs/crate/scheme-rs"
homepage = "https://github.com/maplant/scheme-rs"
repository = "https://github.com/maplant/scheme-rs"

[dependencies]
async-trait = "0.1"
derive_more = { version = "1.0", features = ["debug", "from"]}
dyn-clone = "1.0.13"
futures = "0.3"
inventory = "0.3"
nom = "7"
nom_locate = "4"
num = "0.4"
scheme-rs-macros = { version = "0.0.1", path = "proc-macros" }
rug = { version = "1", features = ["num-traits"] }
rand = "0.8"
thiserror = "1"
tokio = { version = "1.41", features = ["full"] }
unicode_categories = "0.1"
reedline = "0.36"
# TODO: Get rid of this dependency
derivative = "2"

[profile.release]
lto = true
