[package]
name = "scheme-rs"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Matthew Plant <maplant@protonmail.com>"]
description = "Embedded scheme for the async-rust ecosystem"
license = "MPL-2.0"

documentation = "https://docs.rs/crate/scheme-rs"
homepage = "https://github.com/maplant/scheme-rs"
repository = "https://github.com/maplant/scheme-rs"

[dependencies]
by_address = "1.2"
derive_more = { version = "1.0", default-features = false, features = ["debug", "from"]}
either = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc", "std"] }
indexmap = { version = "2", default-features = false, features = ["std"] }
inventory = "0.3"
inkwell = { version = "0.6", default-features = false, features = ["llvm18-1"] }
nom = { version = "7", default-features = false }
nom_locate = { version = "4", default-features = false, features = ["alloc"] }
num = { version = "0.4", default-features = false }
scheme-rs-macros = { version = "0.1.0-alpha.1", path = "proc-macros" }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
tokio = { version = "1.41", default-features = false, features = ["full"] }
unicode_categories = "0.1"
malachite = { version = "0.5.1", default-features = false, features = ["floats", "malachite-nz", "naturals_and_integers", "rationals"] }
rustyline = { version = "15.0.0", default-features = false, features = ["derive"] }
ordered-float = { version = "5.0.0", default-features = false }

[profile.release]
lto = true

[build-dependencies]
nom = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "fib"
harness = false
